force-app/main/default/objects/Employee__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <formula>IF( (Employee_Monthly_Target__c - Employee_Monthly_Achievement__c &gt; 0 ), Employee_Monthly_Target__c - Employee_Monthly_Achievement__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>