force-app/main/default/objects/Employee__c/fields/Cluster_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Sales_Manager__c</fullName>
    <label>Cluster Sales Manager</label>
    <referenceTo>Cluster_Sales_Manager__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>