force-app/main/default/objects/Employee__c/fields/Employee_Monthly_Target__c.field-meta.xml
<CustomField>
    <fullName>Employee_Monthly_Target__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Employee Monthly Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>