force-app/main/default/objects/Employee__c/fields/Last_Three_Month_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Last_Three_Month_Achievement__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Last Three Month Achievement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>