force-app/main/default/objects/Employee__c/fields/Percentage_Of_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Of_Achievement__c</fullName>
    <formula>( Previous_Month_Achievement__c / Previous_Month_Target__c )*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Of Achievement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>