force-app/main/default/objects/Employee__c/fields/Quarterly_Percentage_Of_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Percentage_Of_Achievement__c</fullName>
    <formula>(Last_Three_Month_Achievement__c / Last_Three_Month_Target__c )*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarterly Percentage Of Achievement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>